--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "eslint": "^3.19.0",
     "express": "^4.15.3",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-debug": "^3.1.0",
     "gulp-insert": "^0.5.0",
     "gulp-jshint": "^2.0.4",
     "gulp-livereload": "^3.8.1",
     "gulp-uglify": "^3.0.0",
+    "jquery": "^3.2.1",
     "jshint": "^2.9.4"
   }
 }
