--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^3.1.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-insert": "^0.5.0",
-    "gulp-jshint": "^2.0.4",
     "gulp-livereload": "^3.8.1",
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
-    "jshint": "^2.9.4"
+    "rollup": "^0.42.0"
   }
 }
