--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
     "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-eslint": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
