--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "eslint": "^3.19.0",
     "express": "^4.15.3",
     "gulp": "^3.9.1",
-    "gulp-better-rollup": "^1.1.1",
     "gulp-debug": "^3.1.0",
     "gulp-eslint": "^3.0.1",
     "gulp-insert": "^0.5.0",
@@ -51,7 +50,6 @@
     "jquery": "^3.2.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-eslint": "^3.0.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "rollup-plugin-node-resolve": "^3.0.0"
   }
 }
