--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "gulp",
     "lint": "eslint --config=.eslintrc.js src/ gulpfile.js",
-    "fix": "eslint --fix --config=.eslintrc.js src/ gulpfile.js"
+    "fix": "eslint --fix --config=.eslintrc.js src/ gulpfile.js",
+    "buildExtension": "gulp buildExtension",
+    "all": "gulp all"
   },
   "repository": {
     "type": "git",
