--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --config=.eslintrc.js src/ gulpfile.js",
     "fix": "eslint --fix --config=.eslintrc.js src/ gulpfile.js",
     "buildExtension": "gulp buildExtension",
+    "buildGusMarkdown": "gulp buildGusMarkdown",
     "all": "gulp all"
   },
   "repository": {
