--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint --config=.eslintrc.js src/ gulpfile.js",
     "fix": "eslint --fix --config=.eslintrc.js src/ gulpfile.js",
     "buildExtension": "gulp buildExtension",
-    "buildGusMarkdown": "gulp buildGusMarkdown",
+    "buildAnyBrowserScript": "gulp buildAnyBrowserScript",
     "all": "gulp all",
     "validate": "npm ls"
   },
