--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "^3.19.0",
     "express": "^4.15.3",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.5.0",
     "gulp-debug": "^3.1.0",
     "gulp-eslint": "^3.0.1",
     "gulp-insert": "^0.5.0",
